--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
   tools:context=".MainActivity">
 
   <Button
-    android:id="@+id/btn"
+    android:id="@+id/btn_start"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="Click"
@@ -17,4 +17,13 @@
     app:layout_constraintRight_toRightOf="parent"
     app:layout_constraintTop_toTopOf="parent"/>
 
+
+  <Button
+    android:id="@+id/btn_test"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Test"
+    app:layout_constraintTop_toBottomOf="@+id/btn_start"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
