--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,13 +5,14 @@
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
-  tools:context=".MainActivity">
+  tools:context=".MainActivityPlugin">
 
   <Button
-    android:id="@+id/btn_start"
+    android:id="@+id/btn_test1"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="Click"
+    android:text="Click TestMethod1 "
+    android:textAllCaps="false"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"
@@ -19,11 +20,22 @@
 
 
   <Button
-    android:id="@+id/btn_test"
+    android:id="@+id/btn_test2"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="Test"
-    app:layout_constraintTop_toBottomOf="@+id/btn_start"
+    android:text="Click TestMethod2 "
+    android:textAllCaps="false"
+    app:layout_constraintTop_toBottomOf="@+id/btn_test1"
+    app:layout_constraintLeft_toLeftOf="parent"
+    app:layout_constraintRight_toRightOf="parent"/>
+
+  <Button
+    android:id="@+id/btn_test3"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:text="Click TestMethod3 "
+    android:textAllCaps="false"
+    app:layout_constraintTop_toBottomOf="@+id/btn_test2"
     app:layout_constraintLeft_toLeftOf="parent"
     app:layout_constraintRight_toRightOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
